# haskell-programming-from-first-principles

./: .gitignore
03/: reverse.hs
03 - Strings/: exercises.txt
05/: exercises.txt
05 - Types/: sing.hs
06/: date.hs  eqinstances.hs
06 - Typeclasses/: exercises.txt
07 - More functional patterns/: artful-dodgy.hs  exercises.txt
09  - Lists/: my-filter.hs  my-prelude.hs  my-words.hs
10 - Folding lists/: exercises.txt  scans.hs
11/: programmers.hs
11 - Algebraic datatypes/: huttons-razor.hs
12/: exercises.txt  maybe-lib.hs  natural.hs
12 - Signaling adversity/: either-lib.hs
13/: person.hs
14 - Testing/: exercises.txt
14 - Testing/morse-code/src/: Morse.hs
14 - Testing/word-number/: ChangeLog.md  word-number.cabal
14 - Testing/word-number/tests/: tests.hs
14/addition/: Addition.hs  addition.cabal
14/arithmetic/: ChangeLog.md  arithmetic.cabal
14/arithmetic/src/: Arithmetic.hs
14/arithmetic/tests/: tests.hs
14/morse-code/: morse-code.cabal
14/morse-code/src/: Main.hs
14/morse-code/tests/: tests.hs
15/: maybe-another-monoid.hs
15 - Monoid, Semigroup/: optional.hs
16/: instances-of-func.hs
17/: combinations.hs  exercises.txt  validation.hs
17 - Applicative/: list.hs
17 - Applicative/list/src/: list.hs
18/: either-monad.hs  monad-instances.hs
18 - Monad/: bind-exercise.hs  monad-functions.hs
19 - Applying structure/shawty/: ChangeLog.md
19 - Applying structure/shawty/app/: Main.hs
19/shawty/: LICENSE  shawty.cabal
20/: library-functions.hs
20 - Foldable/: chapter-exercises.hs
21 - Traversable/chapter-exercises/: chapter-exercises.cabal  stack.yaml
21 - Traversable/chapter-exercises/src/: TraversableInstances.hs
21/chapter-exercises/.stack-work/ghci/4cdaf6b6/: cabal_macros.h
21/chapter-exercises/.stack-work/ghci/d8226b9a/: cabal_macros.h
21/chapter-exercises/.stack-work/ghci/e5764e3a/: cabal_macros.h
21/chapter-exercises/tests/: Tests.hs
22/: a-new-beginning.hs  warming-up.hs
22 - Reader/: a-warm-up-stretch.hs  ask.hs  reader-monad.hs  reading-comprehension.hs
23/: fizzbuzz.hs  moi.hs
23 - State/: chapter-exercises.hs  roll-your-own.hs
24 - Parser combinators/chapter-exercises/: Base10Integer.hs  DOT.hs  IP.hs
24 - Parser combinators/fractions/: fractions.cabal  fractions.hs  try-try.hs
24 - Parser combinators/ini/: Ini.hs
24 - Parser combinators/parsing-practice/src/: ParsingPractice.hs
24/chapter-exercises/: ChangeLog.md  Log.hs  PhoneNumber.hs  SemVer.hs  chapter-exercises.cabal
24/fractions/: ChangeLog.md  unit-of-success.hs
24/ini/: ChangeLog.md  ini-tutorial.cabal
24/parsing-practice/: ChangeLog.md  parsing-practice.cabal
25/: Compose.hs
25 - Composing types/: Bifunctor.hs
26/: MaybeT.hs
26 - Monad transformers/: ChapterExercises.hs  EitherT.hs  FixTheCode.hs  ReaderT.hs  StateT.hs  WrapItUp.hs
26 - Monad transformers/HitCounter/: ChangeLog.md  HitCounter.hs
26 - Monad transformers/Morra/: ChangeLog.md  Morra.cabal  Morra.hs
26/HitCounter/: HitCounter.cabal
27/: Bottom.txt  CoreDump.hs  Evaluate.txt
27 - Nonstrictness/: Bottom.hs  Sprint.txt
28 - Basic libraries/Benchmarking/: ChangeLog.md  Vector.hs
28/Benchmarking/: .BenchmarkPractice.hs.swp  .Vector.hs.swp  BenchmarkPractice.hs  Benchmarking.cabal  DList.hs  Main.hs  Queue.hs
29/: Vigenere.hs
29 - IO/ini/: ChangeLog.md
29/ini/: LICENSE  ini.cabal
29/ini/src/: Main.hs
29/ini/src/Data/: Ini.hs
31 - Final project/fingerd/users/: Users.hs
31/fingerd/: LICENSE  finger.db  fingerd.cabal
31/fingerd/debug/: Debug.hs
31/fingerd/fingerd/: Main.hs
31/fingerd/src/: Fingerd.hs
chapter 1/: exercises.txt
chapter 10/: database.hs  my-folds.hs  stop-vowel-stop.hs
chapter 11/: as-patterns.hs  binary-tree.hs  ciphers.hs  exercises.txt  language.hs  logic-goats.hs  phone.hs  vehicles.hs
chapter 12/: binary-tree.hs  string-processing.hs  unfold.hs  validate.hs
chapter 13/: ciphers.hs  exercises.txt  palindrome.hs
chapter 13/hangman/: LICENSE  hangman.cabal
chapter 13/hangman/.stack-work/install/x86_64-linux/lts-13.12/8.6.4/flag-cache/: hangman-0.1.0.0  random-1.1-3ypV4EIycgb35PKjTYYr5q  split-0.2.3.3-6n1iQ0JLFvkeXvJXsAqQc
chapter 13/hangman/src/: .Main.hs.swp  Main.hs
chapter 15/: madlibs.hs  semigroup-monoid-exercises.hs
chapter 15/orphan-instance/: Listy.hs  ListyInstances.hs
chapter 16/: exercises.txt  functors.hs  possibly.hs  sum.hs
chapter 17/: constant.hs  identity-instance.hs  lookups.hs  write-instances.hs
chapter 17/list/: ChangeLog.md  list.cabal
chapter 17/list/.stack-work/ghci/d5a9c131/: cabal_macros.h
chapter 17/list/.stack-work/ghci/efc4a15f/: cabal_macros.h
chapter 19/shawty/.stack-work/ghci/67e2d336/: cabal_macros.h
chapter 2/: exercises.txt  more-fun-with-functions.hs
chapter 3/: building-functions.hs  print3broken.hs
chapter 4/: correcting-syntax.hs  exercises.txt  mood.hs
chapter 5/: arith3broken.hs
chapter 7/: case-practice.hs  exercises-4-5-6.hs
chapter 8/: exercises.txt  recursion.hs  word-number.hs
chapter 9/: ciphers.hs  exercises.txt  my-char.hs  my-enum.hs  my-prelude.hs  my-zip.hs  poem-lines.hs  split-by.hs
(+118 files in other folders)
