name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Cake42/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Heitor Toledo Lassarote de Paula
maintainer:          heitortoledo@hotmail.com
copyright:           2019 Heitor Toledo Lassarote de Paula
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010

executable addition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
