name:                morse-code
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Heitor Toledo Lassarote de Paula
maintainer:          heitortoledo@hotmail.com
copyright:           2019 Heitor Toledo Lassarote de Paula
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable morse-code
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , morse-code
                     , QuickCheck
                     , containers
 
test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , containers
                     , morse-code
                     , QuickCheck
  default-language:    Haskell2010
