name:                fingerd
version:             0.1.0.0
synopsis:            The project chapter from Haskell Programming From First Principles book.
description:         Please read README.md
homepage:            https://github.com/Cake42/haskell-programming-from-first-principles
license:             MIT
license-file:        LICENSE
author:              Heitor Toledo Lassarote de Paula
maintainer:          heitortoledo@hotmail.com
copyright:           2019 Heitor Toledo Lassarote de Paula
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Fingerd
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable users
  ghc-options:         -Wall
  hs-source-dirs:      users
  main-is:             Users.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , fingerd

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      debug
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , network
                     , fingerd

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      fingerd
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , fingerd
