name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         A Hangman game from Haskell Programming From First Principle - Chapter 13
homepage:            https://github.com/Cake42/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Heitor Toledo Lassarote de Paula
maintainer:          heitortoledo@hotmail.com
copyright:           2019 Heitor Toledo Lassarote de Paula
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
